# terminally-online

./: .gitignore  README.md
assets/: gif.sh
client/: Cargo.toml  README.md
client/src/: lib.rs  main.rs
client/src/chat/: command.rs  error.rs  mod.rs
client/src/client/: error.rs  message.rs  mod.rs  room.rs  signaling.rs
client/src/input/: keyboard.rs  mod.rs  webcam.rs
client/src/layout/: mod.rs
client/src/logging/: mod.rs
client/src/room/: client.rs  error.rs  message.rs  mod.rs
client/src/ui/: chatbox.rs  mod.rs  screen.rs  tile.rs  video.rs
client/src/video/: debug.rs  encoding.rs  error.rs  handler.rs  interpolater.rs  mod.rs  webcam.rs
server/: README.md  go.mod  go.sum  main.go
server/room/: client.go  manager.go  message.go  room.go  session.go
server/signaling/: manager.go  message.go  types.go
