[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14"
futures = "0.3"
openh264 = "0.8"
termsize = "0.1"
textwrap = "0.16"

[dependencies.crossterm]
version = "0.29"
features = ["event-stream"]

[dependencies.nokhwa]
version = "0.10"
features = ["input-native", "output-wgpu"]

[dependencies.tokio]
version = "1.46"
features = ["full"]
