[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14"
futures = "0.3"
lazy_static = "1.5"
openh264 = "0.8"
serde_json = "1.0"
termsize = "0.1"
textwrap = "0.16"
tokio-tungstenite = "0.27"
webrtc = "0.13"
whoami = "1.6"

[dependencies.crossterm]
version = "0.29"
features = ["event-stream"]

[dependencies.nokhwa]
version = "0.10"
features = ["input-native", "output-wgpu"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.46"
features = ["full"]
